verplaatsen van css

--- a/app/scss/core/_settings.scss
+++ b/app/scss/core/_settings.scss
@@ -43,7 +43,6 @@ $breakpoint-10: 590px;
 $breakpoint-20: 767px;
 $breakpoint-30: 960px;
 
-
 // Z-index plan
 $z-index-10: 10;
 $z-index-20: 20;
@@ -98,7 +97,8 @@ $color-neutral-90: #1B2224; // almost black
 $black: #000;
 $white: #fff;
 
-// OLD colors
+
+// OLD COLORS
 $light-red: #fbe3e4;
 $light-yellow: #fff6bf;
 $light-green: #e6efc2;
@@ -128,7 +128,7 @@ $success-color:                         $green;
 $default-feedback-bg-color:             $gray;
 
 
-// Animations
+// OLD ANIMATIONS
 $view-animate-hide-speed: .7s;
 $view-animate-show-speed: 1s;
 $sidebar-toggle-speed: .18s;
