--- a/app/scss/shared-components/_top-filter.scss
+++ b/app/scss/shared-components/_top-filter.scss
@@ -56,8 +56,8 @@
     }
 
     > i { 
-        color: $color-neutral-90;
-        margin-right: $spacing; 
+        color: $white;
+        margin: 0 $spacing 0 $spacing/2; 
     }
 
 }
