--- a/app/scss/modules/_feedback.scss
+++ b/app/scss/modules/_feedback.scss
@@ -1,14 +1,24 @@
 // ============ Feedback
 
 footer.feedback {
+    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
     position: fixed;
-    bottom: 0;
+    bottom: -3.5em*.1;
     right: 0;
     background: $default-feedback-bg-color;
     text-align: center;
     left: $menu-size;
-    padding: .5em 0;
-    height: 3.5em;
+    padding: $spacing/2 0 $spacing/1.5;
+    //height: 3.5em;opacity: 1;
+
+    &.ng-hide {
+        opacity: 0;
+    }
+
+    &.ng-hide-remove {
+        animation-name: feedback;
+        animation-duration: 1s;
+    }
 
     span {
         font-size: 1.2em;
@@ -38,8 +48,8 @@ footer.feedback {
         opacity: .75;
         font-size: 1.2em * 1.5;
         position: absolute;
-        right: 0;
-        top: 0;
+        right: $spacing/2;
+        top: $spacing/2;
         padding: 1.2em / 4  1.2em / 3;
 
         &:hover {
@@ -49,22 +59,6 @@ footer.feedback {
     }
 }
 
-footer.feedback {
-
-    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
-    opacity: 1;
-    height: 3.5em*1.1;
-    bottom: -3.5em*.1;
-
-    &.ng-hide {
-        opacity: 0;
-    }
-
-    &.ng-hide-remove {
-        animation-name: feedback;
-        animation-duration: 1s;
-    }
-}
 
 @keyframes feedback {
     0%,
