--- a/app/scss/components/modules/content-filter-list-headers.scss
+++ b/app/scss/components/modules/content-filter-list-headers.scss
@@ -4,13 +4,18 @@
     > .comments,
     > .actions {
         position: absolute;
-        right: 1em;
+        right: 0;
     }
 
     > .actions {
+        @include display(flex);
+        @include align-items(center);
         opacity: 0;
         width: 0;
         overflow: hidden;
+        height: 100%;
+
+        .separate { margin: 0 0.25rem;}
     }
 
     > div > span,
@@ -47,14 +52,15 @@
         }
     }
 
-    > div > button span {
-        line-height: 1 + .5em;
-    }
 
     > div > button {
         background: $color-neutral-60;
         border: none;
-        padding: (.5em / 2) .5em * 2;
+        margin: 0;
+
+        padding: 0.35rem $spacing/2;
+        border-radius: $border-radius-20;
+        font-size: $font-size-40;
     }
 
 
