--- a/app/scss/modules/_running-list.scss
+++ b/app/scss/modules/_running-list.scss
@@ -1,6 +1,7 @@
 // ============ Running list
 
-ul.running-list {
+ul.running-list, 
+ul.report-list {
 
 	li > div {
 		@include display(flex);
@@ -14,6 +15,7 @@ ul.running-list {
 	.comments {
 		@include display(flex); 		// needed for the icons
 		@include align-items(center); 	// needed for the icons
+		margin-right: $spacing/2;
 
 		span {
 			margin-right: 0.25rem;
@@ -32,7 +34,10 @@ ul.running-list--items {
 
 ul.running-list--item-detail {
 
-	
+	div:hover {
+
+		.details { color: $color-neutral-60; }
+	}
 
 	.details {
         display: none;
