nieuwe kleuren en navigatie

--- a/app/scss/components/layout.scss
+++ b/app/scss/components/layout.scss
@@ -5,7 +5,7 @@ div.layout {
 
     > .main {
         top: $header-height;
-        margin-left: $menu-size;
+        margin-left: $navigation-width;
         position: relative;
     }
 
