--- a/app/scss/components/modules/pagination.scss
+++ b/app/scss/components/modules/pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
     text-align: center;
     position: fixed;
-    left: $menu-size;
+    left: $navigation-width;
     right: 0;
     bottom: 2em;
 }
