--- a/app/scss/modules/_feedback.scss
+++ b/app/scss/modules/_feedback.scss
@@ -7,7 +7,7 @@ footer.feedback {
     right: 0;
     background: $default-feedback-bg-color;
     text-align: center;
-    left: $menu-size;
+    left: $navigation-width;
     padding: $spacing/2 0 $spacing/1.5;
     //height: 3.5em;opacity: 1;
 
