--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -27,7 +27,7 @@ div.layout > header {
 
         background-color: $color-neutral-90;
         padding-left: $spacing/2;
-        width: $menu-size;
+        width: $navigation-width;
         padding-right: $spacing/2;
         position: relative;
         color: $color-neutral-10;
