variabelen en font-sizes

--- a/app/scss/core/_settings.scss
+++ b/app/scss/core/_settings.scss
@@ -50,12 +50,12 @@ $z-index-30: 30;
 
 
 // Menu and header sizes
-$header-height: 4.57rem;
+$header-height: 3.57rem;
 $navigation-width: 270px;
 
 
 // Colors
-// Add your own color variables)
+// Add your own color variables
 
 // Color brand
 $color-brand-50: #369d8a; // Default
