--- a/app/scss/modules/_navigation.scss
+++ b/app/scss/modules/_navigation.scss
@@ -42,10 +42,12 @@ nav.navigation {
 }
 
 .navigation--title {
+    @include display(flex);
+    @include align-items(center);
     background: rgba($color-neutral-90, 0.5);
     color: $color-neutral-10;
     font-size: $font-size-60;
-    padding: $spacing $spacing/2 $spacing;
+    padding: 0 $spacing/2;
     font-weight: 300;
     height: $header-height;
 }
@@ -65,6 +67,8 @@ ul.navigation--modules {
         padding: $spacing/2 0;
         //border-radius: $border-radius-20 $border-radius-20 0 0 ;
         position: relative;
+        border-bottom: 1px solid $color-neutral-70;
+        box-shadow: inset 0 -1px 2px 0 rgba($black, 0.2);
 
         &:not(:first-of-type) { border-left: 1px solid $color-neutral-70; }
 
