--- a/app/scss/shared-components/_top-filter.scss
+++ b/app/scss/shared-components/_top-filter.scss
@@ -33,7 +33,7 @@
         background: $color-neutral-90;
         border: solid 2px $color-neutral-90;
         border-radius: $border-radius-20;
-        font-size: 1.5rem;
+        //font-size: 1.5rem;
         padding: $spacing/3 $spacing/1.5;
     }
 
