--- a/app/scss/modules/_navigation.scss
+++ b/app/scss/modules/_navigation.scss
@@ -65,10 +65,10 @@ ul.navigation--modules {
 
         font-size: $font-size-50;
         padding: $spacing/2 0;
-        //border-radius: $border-radius-20 $border-radius-20 0 0 ;
         position: relative;
         border-bottom: 1px solid $color-neutral-70;
         box-shadow: inset 0 -1px 2px 0 rgba($black, 0.2);
+        background: rgba($color-neutral-90, 0.3);
 
         &:not(:first-of-type) { border-left: 1px solid $color-neutral-70; }
 
@@ -80,6 +80,7 @@ ul.navigation--modules {
         &.active {
             color: $color-brand-50;
             border-bottom: 4px solid $color-brand-50;
+            background: none;
         }
 
         .badge {
