--- a/app/scss/shared-components/_top-filter.scss
+++ b/app/scss/shared-components/_top-filter.scss
@@ -16,8 +16,8 @@
 
     > i {
         @include flex(0 0 auto);
-        font-size: 2rem;
-        padding: 0 $spacing;
+        font-size: $font-size-60;
+        padding: 0 $spacing/1.3;
         color: $color-neutral-90;
     }
 }
