--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -4,7 +4,7 @@
         <span>{{ run.title }}</span>
     </div>
 </div>
-<ul id="run-report" story-collapse class="main-content-list filter-1">
+<ul id="run-report" story-collapse class="main-content-list story-list filter-1">
     <li class="ic cl list-animate" ng-repeat="story in run.stories track by story.id">
         <div>
             <div class="title limited">
