--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -26,7 +26,7 @@ html {
 body {
     line-height: 1.5em;
     height: 100%;
-    background-color: $white;
+    background-color: $color-neutral-10;
 }
 
 
