--- a/app/scss/shared-components/_top-filter.scss
+++ b/app/scss/shared-components/_top-filter.scss
@@ -6,6 +6,7 @@
     color: $white;
     font-size: 1.5rem;
     width: 100%;
+    padding: 0 $spacing;
     @include transition(background $animate-std-cubic .1s, opacity $animate-std-cubic $view-animate-show-speed $view-animate-hide-speed);
 
     .actions {
@@ -17,7 +18,7 @@
     > i {
         @include flex(0 0 auto);
         font-size: $font-size-60;
-        padding: 0 $spacing/1.3;
+        margin-right: $spacing/2;
         color: $color-neutral-90;
     }
 }
@@ -26,8 +27,6 @@
     @include flex(0 0 auto);
     @include display(flex);
     @include align-items(center);
-
-    padding-right: $spacing;
 
     > button {
         background: $color-neutral-90;
